# dio-blog

./: README.md  blog.db  main.py  pyproject.toml
src/: db.py
src/controllers/: post.py  postAntigo.py
src/models/: post.py
src/schemas/: post.py
src/views/: post.py
