[tool.poetry]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = ["Thur <arthurrodriguescosta2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = {extras = ["standart"], version = "^0.46.0"}
databases = {extras = ["aiosqlite"], version = "^0.9.0"}
sqlalchemy = "^2.0.49"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
